syntax = "proto3";

option csharp_namespace = "CalculateDiscountService";

package CalculateDiscount;

service CalculateDiscountAmount {
    rpc AmountCalculate (CalculateRequest) returns (CalculateReply);
}

message CalculateRequest {
    string customertype = 1;
}

message CalculateReply {
    double customerdiscount = 1;
}